kubernetes/pgadmin/base/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  ports:
    - name: padmin-port
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: pgadmin
status:
  loadBalancer: {}
