kubernetes/pgadmin/base/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
            path: /
